[project]
name = "sirtuin"
version = "1.3.0"
description = "AWS routines for Python projects"
authors = [{ name = "Meryll Dindin", email = "merylldin@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.13.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tomli>=2.0",
    "typer>=0.9",
]

[project.scripts]
sirtuin = "sirtuin.main:cli"

[project.urls]
Homepage = "https://github.com/merylldindin/sirtuin"
Repository = "https://github.com/merylldindin/sirtuin"

[dependency-groups]
dev = [
    "commitizen==4.11.6",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.13",
    "ty==0.0.12",
    "types-pyyaml==6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sirtuin"]

[tool.ruff]
extend-include = ["*.ipynb", "*.toml"]
line-length = 88
output-format = "grouped"
show-fixes = true
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
dummy-variable-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignore = ["D100", "D101", "E402", "E501"]
select = ["E", "F", "I001", "W"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src/sirtuin", "tests"]
exclude = ["**/__pycache__/**"]

[tool.ty.rules]
unresolved-import = "warn"
unresolved-attribute = "warn"

[tool.ty.terminal]
error-on-warning = false
output-format = "full"

[tool.pytest.ini_options]
addopts = "--no-header -rA"
pythonpath = ["."]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
tag_format = "v$version"
